fix 上传图片位置错误 update UI

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>canvastest</title>
+    <title>canvas卷积核测试</title>
     <style>
     html,body{
       margin: 0;
